--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     }
   ],
   "env": {
-    "VITE_SUPABASE_URL": "@vite_supabase_url",
-    "VITE_SUPABASE_ANON_KEY": "@vite_supabase_anon_key"
+    "VITE_SUPABASE_URL": "https://spytpzjvechwydrekrgj.supabase.co",
+    "VITE_SUPABASE_ANON_KEY": "sb_publishable_K0YygHw_wBjeHloHOwzr-A_HcRD733p"
   }
 }
