--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,8 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/.*",
-      "dest": "/index.html"
-    }
-  ],
-  "env": {
-    "VITE_SUPABASE_URL": "https://spytpzjvechwydrekrgj.supabase.co",
-    "VITE_SUPABASE_ANON_KEY": "sb_publishable_K0YygHw_wBjeHloHOwzr-A_HcRD733p"
-  }
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
